# homeworld_rust

./: Cargo.toml  build.rs
res/test/: Update.big
src/: bigfile.rs  error.rs  main.rs
src/bigfile/: tests.rs
