[package]
name = "homeworld_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0-beta", features = ["from"] }
bytemuck = { version = "1.16", features = ["derive", "extern_crate_std"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[lints.clippy]
pedantic = "warn"
arithmetic-side-effects = { level = "warn", priority = 1 }
as-conversions = { level = "warn", priority = 1 }
clone-on-ref-ptr = { level = "warn", priority = 1 }
create-dir = { level = "warn", priority = 1 }
dbg-macro = { level = "warn", priority = 1 }
decimal-literal-representation = { level = "warn", priority = 1 }
default-numeric-fallback = { level = "warn", priority = 1 }
empty-drop = { level = "warn", priority = 1 }
empty-enum-variants-with-brackets = { level = "warn", priority = 1 }
empty-structs-with-brackets = { level = "warn", priority = 1 }
expect-used = { level = "warn", priority = 1 }
float-cmp-const = { level = "warn", priority = 1 }
fn-to-numeric-cast-any = { level = "warn", priority = 1 }
format-push-string = { level = "warn", priority = 1 }
if-then-some-else-none = { level = "warn", priority = 1 }
impl-trait-in-params = { level = "warn", priority = 1 }
integer-division = { level = "warn", priority = 1 }
large-include-file = { level = "warn", priority = 1 }
let-underscore-must-use = { level = "warn", priority = 1 }
lossy-float-literal = { level = "warn", priority = 1 }
map-err-ignore = { level = "warn", priority = 1 }
mem-forget = { level = "warn", priority = 1 }
min-ident-chars = { level = "warn", priority = 1 }
missing-assert-message = { level = "warn", priority = 1 }
missing-docs-in-private-items = { level = "warn", priority = 1 }
missing-inline-in-public-items = { level = "warn", priority = 1 }
mixed-read-write-in-expression = { level = "warn", priority = 1 }
mod-module-files = { level = "warn", priority = 1 }
multiple-inherent-impl = { level = "warn", priority = 1 }
multiple-unsafe-ops-per-block = { level = "warn", priority = 1 }
mutex-atomic = { level = "warn", priority = 1 }
needless-raw-strings = { level = "warn", priority = 1 }
panic-in-result-fn = { level = "warn", priority = 1 }
partial-pub-fields = { level = "warn", priority = 1 }
pattern-type-mismatch = { level = "warn", priority = 1 }
print-stderr = { level = "warn", priority = 1 }
print-stdout = { level = "warn", priority = 1 }
pub-without-shorthand = { level = "warn", priority = 1 }
rc-buffer = { level = "warn", priority = 1 }
rc-mutex = { level = "warn", priority = 1 }
redundant-type-annotations = { level = "warn", priority = 1 }
renamed-function-params = { level = "warn", priority = 1 }
rest-pat-in-fully-bound-structs = { level = "warn", priority = 1 }
same-name-method = { level = "warn", priority = 1 }
semicolon-inside-block = { level = "warn", priority = 1 }
single-char-lifetime-names = { level = "warn", priority = 1 }
str-to-string = { level = "warn", priority = 1 }
string-add = { level = "warn", priority = 1 }
string-lit-chars-any = { level = "warn", priority = 1 }
string-to-string = { level = "warn", priority = 1 }
suspicious-xor-used-as-pow = { level = "warn", priority = 1 }
tests-outside-test-module = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
try-err = { level = "warn", priority = 1 }
undocumented-unsafe-blocks = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unnecessary-safety-comment = { level = "warn", priority = 1 }
unnecessary-safety-doc = { level = "warn", priority = 1 }
unnecessary-self-imports = { level = "warn", priority = 1 }
unneeded-field-pattern = { level = "warn", priority = 1 }
unreachable = { level = "warn", priority = 1 }
unseparated-literal-suffix = { level = "warn", priority = 1 }
unwrap-in-result = { level = "warn", priority = 1 }
unwrap-used = { level = "warn", priority = 1 }
verbose-file-reads = { level = "warn", priority = 1 }
